--- a/SpringExpert/SpringExpert/src/main/resources/messages.properties
+++ b/SpringExpert/SpringExpert/src/main/resources/messages.properties
@@ -6,3 +6,5 @@ campo.cpf.obrigatorio=Campo CPF é obrigatório.
 campo.nome.obrigatorio=Campo nome é obrigatório.
 campo.descricao.obrigatorio=Campo Descrição é obrigatório.
 campo.preco.obrigatorio=Campo Preço é obrigatório.
+campo.usuario.obrigatorio=Campo login é obrigatório.
+campo.senha.obrigatorio=Campo senha é obrigatorio.
